Refactor documentation and add new features
- Removed related workflows sections from documentation generation and git integration workflows.
- Added test command generation section in testing documentation with examples for generating and executing testing commands.
- Removed comprehensive test generation script and related sections from testing documentation.
- Added performance and security test workflows in testing documentation.
- Introduced a new completion command for the rawi CLI tool, including setup instructions and features.
- Added exec command documentation, detailing how to convert natural language descriptions into executable CLI commands with safety validation.
- Updated completion and exec documentation with examples, options, and troubleshooting sections.

--- a/src/content/docs/advanced/profiles.mdx
+++ b/src/content/docs/advanced/profiles.mdx
@@ -1,458 +1,557 @@
 ---
 title: Profile Management
-description: Learn how to create and manage multiple configurations for different projects, providers, and use cases.
+description: Master Rawi's profile system to efficiently manage multiple AI providers, models, and configurations for different use cases.
 ---
-
-Profile management in Rawi allows you to maintain different configurations for various projects, AI providers, and use cases. Each profile can have its own provider, model, API keys, and settings.
 
 ## What Are Profiles?
 
-Profiles are named configurations that contain:
+Profiles in Rawi are named configurations that store:
 
-- AI provider settings (OpenAI, Anthropic, etc.)
-- Model selection and parameters
-- API keys and endpoints
-- Default templates and preferences
-- Custom settings for specific use cases
+- **AI Provider** — Which AI service to use (OpenAI, Anthropic, Ollama, etc.)
+- **Model Selection** — Specific model within the provider
+- **Authentication** — API keys and credentials
+- **Generation Settings** — Temperature, max tokens, language preferences
+- **Provider Settings** — Custom endpoints, regions, and provider-specific options
 
-## Basic Profile Commands
+## Profile Benefits
 
-### Listing Profiles
+### Multiple Use Cases
+
+```bash
+# Different profiles for different needs
+rawi configure --profile work --provider openai --model gpt-4o
+rawi configure --profile analysis --provider anthropic --model claude-3-sonnet-20240229
+rawi configure --profile local --provider ollama --model llama3.2
+rawi configure --profile budget --provider openai --model gpt-3.5-turbo
+```
+
+### Easy Switching
+
+```bash
+# Use specific profiles for tasks
+rawi ask "Review this code" --profile work
+rawi ask "Analyze this data" --profile analysis
+rawi ask "Quick question" --profile local
+```
+
+### Isolated Configurations
+
+Each profile maintains separate:
+
+- Conversation history
+- Usage statistics
+- Session management
+- Provider credentials
+
+## Basic Profile Management
+
+### Creating Profiles
+
+```bash
+# Interactive profile creation
+rawi configure --profile myprofile
+
+# Quick profile setup
+rawi configure --profile work \
+  --provider openai \
+  --model gpt-4o \
+  --api-key sk-your-key
+
+# Copy existing profile settings
+rawi configure --profile backup --provider openai --model gpt-4o
+```
+
+### Viewing Profiles
 
 ```bash
 # List all profiles
 rawi configure --list
 
-# Show current active profile
-rawi configure --show
-
-# Show specific profile details
+# Show specific profile
 rawi configure --profile work --show
-```
 
-### Creating Profiles
+# Show all profile details
+rawi info --profiles
 
-```bash
-# Create a new profile interactively
-rawi configure --profile work
-
-# Create profile with specific settings
-rawi configure --profile personal \
-  --provider openai \
-  --model gpt-4 \
-  --api-key sk-your-personal-key
-
-# Create profile for local AI
-rawi configure --profile local \
-  --provider ollama \
-  --model llama2 \
-  --base-url http://localhost:11434
+# Quick profile overview
+rawi info
 ```
 
 ### Using Profiles
 
 ```bash
-# Use specific profile for a question
-rawi ask --profile work "How do I optimize this database query?"
+# Use default profile
+rawi ask "How are you?"
 
-# Switch default profile
-rawi configure --profile personal --set-default
+# Use specific profile
+rawi ask "Code review question" --profile work
 
-# Use profile with other features
-rawi ask --profile work --act code-reviewer "Review this code"
+# Switch between profiles
+rawi ask "Data analysis task" --profile analysis
+rawi ask "Quick local question" --profile local
 ```
 
-## Common Profile Setups
+## Profile Configuration Strategies
 
-### Work vs Personal Profiles
+### By Use Case
 
-**Work Profile (Enterprise/Secure):**
-
-```bash
-rawi configure --profile work \
-  --provider azure \
-  --model gpt-4 \
-  --api-key your-work-key \
-  --base-url https://company.openai.azure.com \
-  --temperature 0.1
-```
-
-**Personal Profile (Flexible):**
+**Development Profile:**
 
 ```bash
-rawi configure --profile personal \
+rawi configure --profile development \
   --provider openai \
-  --model gpt-4 \
-  --api-key your-personal-key \
-  --temperature 0.7
-```
-
-### Provider-Specific Profiles
-
-**OpenAI Profile:**
-
-```bash
-rawi configure --profile openai-pro \
-  --provider openai \
-  --model gpt-4 \
-  --temperature 0.5 \
-  --max-tokens 2000
-```
-
-**Anthropic Profile:**
-
-```bash
-rawi configure --profile claude \
-  --provider anthropic \
-  --model claude-3-5-sonnet-20241022 \
-  --temperature 0.3
-```
-
-**Local AI Profile:**
-
-```bash
-rawi configure --profile offline \
-  --provider ollama \
-  --model codellama \
-  --base-url http://localhost:11434
-```
-
-### Use Case Profiles
-
-**Code Review Profile:**
-
-```bash
-rawi configure --profile code-review \
-  --provider anthropic \
-  --model claude-3-5-sonnet-20241022 \
-  --temperature 0.1 \
-  --default-act code-reviewer
+  --model gpt-4o \
+  --temperature 0.2 \
+  --max-tokens 4096
 ```
 
 **Creative Writing Profile:**
 
 ```bash
 rawi configure --profile creative \
-  --provider openai \
-  --model gpt-4 \
-  --temperature 0.9 \
-  --default-act creative-writer
+  --provider anthropic \
+  --model claude-3-opus-20240229 \
+  --temperature 0.8 \
+  --max-tokens 2048
 ```
 
-**Data Analysis Profile:**
+**Analysis Profile:**
 
 ```bash
-rawi configure --profile data \
-  --provider openai \
-  --model gpt-4 \
-  --temperature 0.2 \
-  --default-act data-scientist
-```
-
-## Advanced Profile Management
-
-### Profile Configuration
-
-```bash
-# Set profile-specific settings
-rawi configure --profile work \
+rawi configure --profile analysis \
+  --provider anthropic \
+  --model claude-3-sonnet-20240229 \
   --temperature 0.1 \
-  --max-tokens 1500 \
-  --timeout 30 \
-  --retry-count 3
-
-# Configure profile defaults
-rawi configure --profile work \
-  --default-act software-engineer \
-  --auto-session true \
-  --verbose false
+  --max-tokens 4096
 ```
 
-### Environment-Based Profiles
-
-**Development Environment:**
+**Local/Private Profile:**
 
 ```bash
-rawi configure --profile dev \
+rawi configure --profile private \
   --provider ollama \
-  --model codellama \
-  --temperature 0.3
+  --model llama3.2 \
+  --temperature 0.5
 ```
 
-**Production Environment:**
+### By Performance Needs
+
+**High Performance:**
 
 ```bash
-rawi configure --profile prod \
-  --provider azure \
-  --model gpt-4 \
-  --temperature 0.1 \
-  --max-tokens 1000
-```
-
-**Testing Environment:**
-
-```bash
-rawi configure --profile test \
+rawi configure --profile performance \
   --provider openai \
-  --model gpt-3.5-turbo \
-  --temperature 0.2
+  --model gpt-4o \
+  --max-tokens 4096
 ```
 
-## Profile Workflows
-
-### Project-Based Workflows
-
-```bash
-# Web development project
-rawi ask --profile web-dev "How do I implement SSR in Next.js?"
-
-# Mobile development project
-rawi ask --profile mobile "Best practices for React Native navigation?"
-
-# Data science project
-rawi ask --profile data-science "How do I visualize this dataset?"
-```
-
-### Team Collaboration
-
-```bash
-# Shared team profile (same settings for consistency)
-rawi configure --profile team-standard \
-  --provider azure \
-  --model gpt-4 \
-  --temperature 0.3 \
-  --max-tokens 1500
-
-# Individual customization
-rawi configure --profile john-personal \
-  --provider openai \
-  --model gpt-4 \
-  --temperature 0.7
-```
-
-### Cost Management
-
-**Premium Profile (High-quality, higher cost):**
-
-```bash
-rawi configure --profile premium \
-  --provider openai \
-  --model gpt-4 \
-  --max-tokens 4000
-```
-
-**Budget Profile (Good quality, lower cost):**
+**Cost Effective:**
 
 ```bash
 rawi configure --profile budget \
   --provider openai \
   --model gpt-3.5-turbo \
-  --max-tokens 1000
+  --max-tokens 2048
 ```
 
-**Free Profile (Local, no API costs):**
+**Speed Optimized:**
 
 ```bash
-rawi configure --profile free \
+rawi configure --profile fast \
+  --provider anthropic \
+  --model claude-3-haiku-20240307 \
+  --max-tokens 1024
+```
+
+### By Context Requirements
+
+**Long Context:**
+
+```bash
+rawi configure --profile longcontext \
+  --provider anthropic \
+  --model claude-3-sonnet-20240229 \
+  --max-tokens 8192
+```
+
+**Short Context:**
+
+```bash
+rawi configure --profile quick \
+  --provider openai \
+  --model gpt-3.5-turbo \
+  --max-tokens 1024
+```
+
+## Advanced Profile Management
+
+### Profile Templates
+
+Common profile configurations:
+
+**Software Development:**
+
+```bash
+# Primary development profile
+rawi configure --profile dev-main \
+  --provider openai \
+  --model gpt-4o \
+  --temperature 0.2 \
+  --language english
+
+# Code review profile
+rawi configure --profile dev-review \
+  --provider anthropic \
+  --model claude-3-sonnet-20240229 \
+  --temperature 0.1 \
+  --language english
+
+# Local development profile
+rawi configure --profile dev-local \
   --provider ollama \
-  --model llama2
+  --model codellama \
+  --temperature 0.3
+```
+
+**Data Science:**
+
+```bash
+# Analysis profile
+rawi configure --profile data-analysis \
+  --provider anthropic \
+  --model claude-3-opus-20240229 \
+  --temperature 0.1 \
+  --max-tokens 4096
+
+# Visualization profile
+rawi configure --profile data-viz \
+  --provider openai \
+  --model gpt-4o \
+  --temperature 0.3 \
+  --max-tokens 2048
+```
+
+**Content Creation:**
+
+```bash
+# Writing profile
+rawi configure --profile writing \
+  --provider anthropic \
+  --model claude-3-opus-20240229 \
+  --temperature 0.7 \
+  --max-tokens 3072
+
+# Editing profile
+rawi configure --profile editing \
+  --provider openai \
+  --model gpt-4o \
+  --temperature 0.3 \
+  --max-tokens 2048
+```
+
+### Multi-Provider Setups
+
+Use different providers for different strengths:
+
+```bash
+# OpenAI for coding
+rawi configure --profile coding \
+  --provider openai \
+  --model gpt-4o
+
+# Anthropic for analysis
+rawi configure --profile analysis \
+  --provider anthropic \
+  --model claude-3-sonnet-20240229
+
+# Ollama for privacy
+rawi configure --profile private \
+  --provider ollama \
+  --model llama3.2
+
+# Google for multimodal
+rawi configure --profile multimodal \
+  --provider google \
+  --model gemini-pro
+```
+
+## Profile-Specific Features
+
+### Independent Histories
+
+Each profile maintains separate conversation history:
+
+```bash
+# Work conversations
+rawi ask "Project planning" --profile work
+rawi history sessions --profile work
+
+# Personal conversations
+rawi ask "Learning topic" --profile personal
+rawi history sessions --profile personal
+
+# Histories don't mix between profiles
+```
+
+### Profile Statistics
+
+Monitor usage per profile:
+
+```bash
+# Overall statistics
+rawi history stats
+
+# Profile-specific statistics
+rawi history stats --profile work
+rawi history stats --profile analysis
+
+# Compare profile usage
+rawi info --profiles
+```
+
+### Profile-Based Session Management
+
+Sessions are tied to profiles:
+
+```bash
+# Start session in work profile
+rawi ask "Architecture discussion" --profile work --new-session
+
+# Continue session (must use same profile)
+rawi ask "Add database details" --profile work --session abc123
+
+# Different profile = different sessions
+rawi ask "Personal question" --profile personal --new-session
+```
+
+## Profile Workflows
+
+### Development Workflow
+
+```bash
+# Daily development routine
+morning_standup() {
+  rawi ask "Review today's priorities" --profile dev-main --new-session
+}
+
+code_review() {
+  rawi ask "Review this PR" --profile dev-review < changes.diff
+}
+
+architecture_planning() {
+  rawi ask "Design system architecture" --profile dev-architect --new-session
+}
+
+local_testing() {
+  rawi ask "Quick debugging help" --profile dev-local
+}
+```
+
+### Research Workflow
+
+```bash
+# Research and analysis routine
+initial_research() {
+  rawi ask "Overview of topic X" --profile research --new-session
+}
+
+deep_analysis() {
+  rawi ask "Detailed analysis of Y" --profile analysis
+}
+
+creative_synthesis() {
+  rawi ask "Synthesize findings creatively" --profile creative
+}
+
+final_review() {
+  rawi ask "Review and critique" --profile review
+}
+```
+
+### Content Creation Workflow
+
+```bash
+# Content development process
+brainstorm() {
+  rawi ask "Generate content ideas" --profile creative --new-session
+}
+
+draft() {
+  rawi ask "Write first draft" --profile writing
+}
+
+edit() {
+  rawi ask "Edit and improve" --profile editing
+}
+
+optimize() {
+  rawi ask "SEO and readability" --profile marketing
+}
 ```
 
 ## Profile Best Practices
 
-### 1. Naming Conventions
+### Naming Conventions
 
-Use clear, descriptive names:
+Use clear, descriptive profile names:
 
 ```bash
 # Good naming
-work-azure
-personal-openai
-local-development
-code-review-claude
+rawi configure --profile work-frontend
+rawi configure --profile personal-learning
+rawi configure --profile client-projectx
+rawi configure --profile analysis-financial
 
 # Avoid generic names
-profile1
-test
-temp
+rawi configure --profile test
+rawi configure --profile temp
+rawi configure --profile profile1
 ```
 
-### 2. Environment Separation
+### Profile Organization
+
+Structure profiles by:
+
+1. **Context** — work, personal, client
+2. **Purpose** — development, analysis, creative
+3. **Provider** — openai-main, anthropic-analysis
+4. **Performance** — fast-responses, detailed-analysis
+
+### Configuration Management
+
+Keep configurations organized:
 
 ```bash
-# Separate work and personal
-rawi configure --profile work-openai
-rawi configure --profile personal-claude
+# Document your profiles
+rawi info --profiles > profiles-backup.txt
 
-# Separate by project
-rawi configure --profile project-alpha
-rawi configure --profile project-beta
+# Regular profile cleanup
+rawi configure --list
+rawi configure --delete unused-profile
+
+# Backup important configurations
+rawi configure --profile important --show > important-profile.config
 ```
 
-### 3. Provider Redundancy
+## Profile Switching and Automation
 
-Set up multiple providers for reliability:
+### Quick Profile Switching
 
 ```bash
-# Primary provider
-rawi configure --profile main --provider openai
+# Set up aliases for common profiles
+alias rawi-work="rawi ask --profile work"
+alias rawi-analysis="rawi ask --profile analysis"
+alias rawi-local="rawi ask --profile local"
 
-# Backup provider
-rawi configure --profile backup --provider anthropic
-
-# Local fallback
-rawi configure --profile local --provider ollama
+# Use aliases
+rawi-work "Review this architecture"
+rawi-analysis "Analyze this dataset"
+rawi-local "Quick question"
 ```
 
-### 4. Security Considerations
+### Scripted Profile Usage
 
 ```bash
-# Use environment variables for sensitive keys
-export OPENAI_API_KEY="sk-your-key"
-rawi configure --profile secure --provider openai --api-key "$OPENAI_API_KEY"
+#!/bin/bash
+# Smart profile selection script
 
-# Separate profiles for different security levels
-rawi configure --profile public-demos --provider ollama  # No API keys
-rawi configure --profile internal --provider azure      # Company keys
+task_type=$1
+question=$2
+
+case $task_type in
+  "code")
+    rawi ask "$question" --profile development
+    ;;
+  "analyze")
+    rawi ask "$question" --profile analysis
+    ;;
+  "write")
+    rawi ask "$question" --profile creative
+    ;;
+  "quick")
+    rawi ask "$question" --profile local
+    ;;
+  *)
+    rawi ask "$question" --profile default
+    ;;
+esac
 ```
 
-## Profile Configuration Files
-
-### Location
-
-Profiles are stored in:
-
-- **Linux/macOS:** `~/.config/rawi/profiles/`
-- **Windows:** `%APPDATA%/rawi/profiles/`
-
-### Manual Editing
+### Environment-Based Profiles
 
 ```bash
-# Edit profile configuration directly
-nano ~/.config/rawi/profiles/work.json
+# Set profile based on environment
+if [[ "$PWD" == *"/work/"* ]]; then
+  export RAWI_PROFILE="work"
+elif [[ "$PWD" == *"/personal/"* ]]; then
+  export RAWI_PROFILE="personal"
+else
+  export RAWI_PROFILE="default"
+fi
 
-# Copy profile configuration
-cp ~/.config/rawi/profiles/work.json ~/.config/rawi/profiles/work-backup.json
+# Use environment-based profile
+rawi ask "Context-aware question" --profile $RAWI_PROFILE
 ```
 
-### Profile Export/Import
+## Profile Troubleshooting
 
-```bash
-# Export profile settings
-rawi configure --profile work --export > work-profile.json
-
-# Import profile settings
-rawi configure --profile new-work --import work-profile.json
-
-# Share team profile
-rawi configure --profile team --export | base64  # Share encoded config
-```
-
-## Troubleshooting Profiles
-
-### Common Profile Issues
+### Common Issues
 
 **Profile not found:**
 
 ```bash
-# List available profiles
+# Check available profiles
 rawi configure --list
+
+# Create missing profile
+rawi configure --profile missing-profile
 ```
 
-**Profile authentication errors:**
+**Authentication errors:**
 
 ```bash
 # Check profile configuration
-rawi configure --profile work --show
-rawi configure --profile work --test-connection
+rawi configure --profile problematic --show
+
+# Reconfigure credentials
+rawi configure --profile problematic --api-key new-key
 ```
 
-**Profile conflicts:**
+**Model not available:**
 
 ```bash
-# Reset profile to defaults
-rawi configure --profile work --reset
+# Check provider models
+rawi provider --list-models your-provider
 
-# Delete problematic profile
-rawi configure --profile old-profile --delete
+# Update model selection
+rawi configure --profile your-profile --model available-model
 ```
 
-### Profile Validation
+### Profile Cleanup
 
 ```bash
-# Test profile configuration
-rawi configure --profile work --validate
+# Remove unused profiles
+rawi configure --delete old-profile
 
-# Check API connectivity
-rawi ask --profile work "test connection"
+# Clean up profile history
+rawi history cleanup --profile old-profile --days 0
 
-# Verify model availability
-rawi provider --models openai
+# Reset profile configuration
+rawi configure --profile reset-me # Reconfigure interactively
 ```
 
-## Integration Examples
-
-### Profile + Sessions
+### Profile Migration
 
 ```bash
-# Start work session with work profile
-rawi ask --profile work --new-session "Starting the API refactoring project"
+# Backup current profiles
+rawi info --profiles > profiles-backup.txt
 
-# Continue with same profile and session
-rawi ask --profile work --session abc123 "How do we handle data migration?"
-```
+# Export profile history
+rawi history export --profile old-profile --output old-profile-history.json
 
-### Profile + Templates
+# Create new profile with same settings
+rawi configure --profile new-profile --provider same --model same
 
-```bash
-# Code review with specific profile
-rawi ask --profile claude-code --act code-reviewer "Review this function"
-
-# Technical writing with creative profile
-rawi ask --profile creative --act technical-writer "Write user documentation"
-```
-
-### Profile + Shell Integration
-
-```bash
-# Analyze logs with data profile
-tail -f app.log | rawi ask --profile data-analysis "Summarize errors"
-
-# Code review with work profile
-cat src/app.js | rawi ask --profile work --act code-reviewer "Review this"
-```
-
-## Automation and Scripting
-
-### Profile-Based Scripts
-
-```bash
-#!/bin/bash
-# Daily standup helper
-rawi ask --profile work --new-session "Generate standup report for $(date +%Y-%m-%d)"
-```
-
-```bash
-#!/bin/bash
-# Code review automation
-for file in src/*.js; do
-    echo "Reviewing $file..."
-    cat "$file" | rawi ask --profile code-review --act code-reviewer "Review this file"
-done
-```
-
-### Environment Detection
-
-```bash
-#!/bin/bash
-# Auto-select profile based on directory
-if [[ $PWD == *"/work/"* ]]; then
-    PROFILE="work"
-elif [[ $PWD == *"/personal/"* ]]; then
-    PROFILE="personal"
-else
-    PROFILE="default"
-fi
-
-rawi ask --profile "$PROFILE" "$@"
+# Clean up old profile
+rawi configure --delete old-profile
 ```
