--- a/src/content/docs/reference/history.mdx
+++ b/src/content/docs/reference/history.mdx
@@ -1,9 +1,9 @@
 ---
 title: history — Conversation Management
-description: The history command lets you search, manage, and analyze your AI conversation history with separate views for ask and chat sessions.
+description: The history command lets you search, manage, and analyze your AI conversation history with separate views for ask, chat, and exec sessions.
 ---
 
-The `history` command lets you search, manage, and analyze your AI conversation history with separate views for ask and chat sessions.
+The `history` command lets you search, manage, and analyze your AI conversation history with separate views for ask, chat, and exec sessions.
 
 ## Basic Usage
 
@@ -19,6 +19,9 @@ rawi history ask
 
 # Show chat session history
 rawi history chat
+
+# Show exec session history
+rawi history exec
 ```
 
 ### Quick Commands
@@ -30,9 +33,14 @@ rawi history ask --search "docker"
 # Show recent chat sessions
 rawi history chat --limit 10
 
+# Show recent exec commands
+rawi history exec --limit 20
+
 # Filter by profile
 rawi history ask --profile work
 ```
+
+---
 
 ## Subcommands
 
@@ -56,6 +64,16 @@ rawi history chat [options]
 
 **Purpose:** View all your interactive chat conversations and longer discussions.
 
+### `exec`
+
+Show exec session history. View and search your exec sessions and generated commands.
+
+```bash
+rawi history exec [options]
+```
+
+---
+
 ## Options
 
 All options are available for both `ask` and `chat` subcommands:
@@ -71,6 +89,8 @@ All options are available for both `ask` and `chat` subcommands:
 | `--to <date>`           |       | Show sessions to date (YYYY-MM-DD)         |           |
 | `--all`                 |       | Show all sessions without pagination limit |           |
 | `--all-profiles`        |       | Show sessions from all profiles            |           |
+
+---
 
 ## Search and Filtering
 
@@ -130,6 +150,8 @@ rawi history ask --profile work
 rawi history chat --all-profiles
 ```
 
+---
+
 ## Examples
 
 ### Basic Usage
@@ -141,9 +163,13 @@ rawi history ask
 # Show recent chat sessions
 rawi history chat
 
+# Show recent exec sessions
+rawi history exec
+
 # Limit results
 rawi history ask --limit 5
 rawi history chat --limit 10
+rawi history exec --limit 15
 ```
 
 **Example output:**
@@ -173,8 +199,12 @@ rawi history ask --search "docker"
 # Search for debugging in chat sessions
 rawi history chat --search "debugging"
 
+# Search for file operations in exec sessions
+rawi history exec --search "file"
+
 # Search across all profiles
 rawi history ask --search "react" --all-profiles
+rawi history exec --search "git" --all-profiles
 ```
 
 ### Advanced Filtering
@@ -186,8 +216,14 @@ rawi history ask --provider openai --from 2024-01-01
 # Chat sessions using GPT-4 in work profile
 rawi history chat --model gpt-4 --profile work
 
-# Combine multiple filters
-rawi history ask --provider anthropic --search "security" --limit 5
+# Exec sessions with commands from last week
+rawi history exec --from $(date -d '1 week ago' +%Y-%m-%d)
+
+# All exec sessions without pagination
+rawi history exec --all
+
+# Recent ask sessions from specific date range
+rawi history ask --from 2024-01-01 --to 2024-01-31 --limit 20
 ```
 
 ### Complex Queries
@@ -206,17 +242,20 @@ rawi history ask --from 2024-01-01 --to 2024-01-31 --limit 20
 ### Cross-Session Type Analysis
 
 ```bash
-# Compare ask vs chat activity
+# Compare ask vs chat vs exec activity
 rawi history ask --limit 10
 rawi history chat --limit 10
+rawi history exec --limit 10
 
-# Search same topic across both types
+# Search same topic across all types
 rawi history ask --search "kubernetes"
 rawi history chat --search "kubernetes"
+rawi history exec --search "kubernetes"
 
 # Find all OpenAI interactions
 rawi history ask --provider openai
 rawi history chat --provider openai
+rawi history exec --provider openai
 ```
 
 ## Use Cases
@@ -228,9 +267,14 @@ rawi history chat --provider openai
 rawi history ask --search "code review"
 rawi history chat --search "debugging"
 
+# Review command generation history
+rawi history exec --search "docker"
+rawi history exec --search "git"
+
 # Find specific technology discussions
 rawi history ask --search "typescript"
 rawi history chat --search "react"
+rawi history exec --search "npm"
 ```
 
 ### Project Organization
@@ -324,7 +368,3 @@ rawi history ask --search "docker compose"
 # Combine filters to narrow results
 rawi history chat --search "error" --provider openai --from 2024-08-01
 ```
-
----
-
-For more information, see the Rawi documentation or run `rawi history --help`.
